# vmrk

./: CMakeLists.txt  LICENSE  README.md  build.sh  run.sh
src/: CMakeLists.txt
src/arch/i686/: CMakeLists.txt
src/arch/x86_64/: CMakeLists.txt  boot.S  control_register.h  gdt.h  kernel.h  mmu.h  msr.h  multiboot2.h  sizes.h
src/boot/i686/: CMakeLists.txt
src/bootstrap/: CMakeLists.txt
src/bootstrap/include/: bootstrap.hpp
src/bootstrap/src/: bootstrap.cxx
src/folder_template/: CMakeLists.txt
src/grub/: grub.cfg
src/iso/: CMakeLists.txt
src/kernel/: CMakeLists.txt  kernel.cxx
src/kernel/linker/: linker.ld
src/kernel/src/: kernel.cxx
src/libc/: CMakeLists.txt
src/libc/include/: compiler.hpp  stdio.h  stdlib.h
src/libc/src/: compiler.cxx  stdio.cxx  stdlib.cxx  string.c
src/terminal/: CMakeLists.txt
src/terminal/include/: terminal.hpp
src/terminal/src/: terminal.cxx
